--- a/inference_pipeline.ipynb
+++ b/inference_pipeline.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -74,7 +74,7 @@
             "PAF: 98.91%\n",
             "PAF: 98.01%\n",
             "1\n",
-            "Unrelated: 99.82%\n",
+            "Unrelated: 99.88%\n",
             "2\n",
             "Crisis finance: 99.4%\n",
             "PAF: 99.19%\n",
@@ -116,61 +116,41 @@
         "from scipy.special import softmax\n",
         "\n",
         "\n",
-        "\n",
-        "def inference(tokenizer, model_1, model_2, model_3, text):\n",
-        "    inputs = tokenizer(text, return_tensors=\"pt\", truncation=True)\n",
-        "\n",
-        "    with torch.no_grad():\n",
-        "        predictions_1 = model_1(**inputs)\n",
-        "    \n",
-        "    logits_1 = predictions_1.logits.numpy()[0]\n",
-        "    predicted_class_id_1 = np.argmax(logits_1)\n",
-        "    predicted_class_1 = model_1.config.id2label[predicted_class_id_1]\n",
-        "    predicted_class_1_confidence = softmax(logits_1, axis=0)[predicted_class_id_1]\n",
-        "\n",
-        "    if predicted_class_1 == 'Unrelated':\n",
-        "        print(\"{}: {}%\".format(\n",
-        "            predicted_class_1,\n",
-        "            round(predicted_class_1_confidence * 100, 2)\n",
-        "            )\n",
-        "        )\n",
-        "        return\n",
-        "\n",
-        "    with torch.no_grad():\n",
-        "        predictions_2 = model_2(**inputs)\n",
-        "\n",
-        "    logits_2 = predictions_2.logits.numpy()[0]\n",
-        "    predicted_class_id_2 = np.argmax(logits_2)\n",
-        "    predicted_class_2 = model_2.config.id2label[predicted_class_id_2]\n",
-        "    predicted_class_2_confidence = softmax(logits_2, axis=0)[predicted_class_id_2]\n",
-        "\n",
-        "    if predicted_class_2 == 'Crisis finance':\n",
-        "        print(\"\"\"{}: {}%\\n{}: {}%\"\"\".format(\n",
-        "            predicted_class_1,\n",
-        "            round(predicted_class_1_confidence * 100, 2),\n",
-        "            predicted_class_2,\n",
-        "            round(predicted_class_2_confidence * 100, 2)\n",
-        "            )\n",
-        "        )\n",
-        "        return\n",
-        "    \n",
-        "    with torch.no_grad():\n",
-        "        predictions_3 = model_3(**inputs)\n",
-        "\n",
-        "    logits_3 = predictions_3.logits.numpy()[0]\n",
-        "    predicted_class_id_3 = np.argmax(logits_3)\n",
-        "    predicted_class_3 = model_3.config.id2label[predicted_class_id_3]\n",
-        "    predicted_class_3_confidence = softmax(logits_3, axis=0)[predicted_class_id_3]\n",
-        "\n",
-        "    print(\"\"\"{}: {}%\\n{}: {}%\\n{}: {}%\"\"\".format(\n",
-        "        predicted_class_1,\n",
-        "        round(predicted_class_1_confidence * 100, 2),\n",
-        "        predicted_class_2,\n",
-        "        round(predicted_class_2_confidence * 100, 2),\n",
-        "        predicted_class_3,\n",
-        "        round(predicted_class_3_confidence * 100, 2)\n",
+        "def print_inference(class_name, confidence):\n",
+        "    print(\"{}: {}%\".format(\n",
+        "        class_name,\n",
+        "        round(confidence * 100, 2)\n",
         "        )\n",
         "    )\n",
+        "\n",
+        "\n",
+        "def inference(model, inputs):\n",
+        "    with torch.no_grad():\n",
+        "        predictions = model(**inputs)\n",
+        "    \n",
+        "    logits = predictions.logits.numpy()[0]\n",
+        "    predicted_class_id = np.argmax(logits)\n",
+        "    predicted_class = model.config.id2label[predicted_class_id]\n",
+        "    predicted_class_confidence = softmax(logits, axis=0)[predicted_class_id]\n",
+        "\n",
+        "    return predicted_class, predicted_class_confidence\n",
+        "\n",
+        "\n",
+        "def pipeline(tokenizer, model_1, model_2, model_3, text):\n",
+        "    inputs = tokenizer(text, return_tensors=\"pt\", truncation=True)\n",
+        "\n",
+        "    predicted_class_1, predicted_class_1_confidence = inference(model_1, inputs)\n",
+        "    print_inference(predicted_class_1, predicted_class_1_confidence)\n",
+        "    if predicted_class_1 == 'Unrelated':\n",
+        "        return\n",
+        "\n",
+        "    predicted_class_2, predicted_class_2_confidence = inference(model_2, inputs)\n",
+        "    print_inference(predicted_class_2, predicted_class_2_confidence)\n",
+        "    if predicted_class_2 == 'Crisis finance':\n",
+        "        return\n",
+        "    \n",
+        "    predicted_class_3, predicted_class_3_confidence = inference(model_3, inputs)\n",
+        "    print_inference(predicted_class_3, predicted_class_3_confidence)\n",
         "    \n",
         "\n",
         "\n",
@@ -204,7 +184,7 @@
         "\n",
         "for i, text in enumerate(texts):\n",
         "    print(i)\n",
-        "    inference(tokenizer, model_1, model_2, model_3, text)"
+        "    pipeline(tokenizer, model_1, model_2, model_3, text)"
       ]
     }
   ],
