--- a/inference_pipeline.ipynb
+++ b/inference_pipeline.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -73,39 +73,52 @@
             "Crisis finance: 99.48%\n",
             "PAF: 98.91%\n",
             "PAF: 98.01%\n",
+            "0.36362361907958984\n",
             "1\n",
             "Unrelated: 99.88%\n",
+            "0.12197732925415039\n",
             "2\n",
             "Crisis finance: 99.4%\n",
             "PAF: 99.19%\n",
             "PAF: 97.12%\n",
+            "0.4778251647949219\n",
             "3\n",
             "Crisis finance: 92.92%\n",
             "PAF: 91.54%\n",
             "PAF: 91.72%\n",
+            "1.3052735328674316\n",
             "4\n",
             "Crisis finance: 99.87%\n",
             "PAF: 98.22%\n",
             "AA: 97.71%\n",
+            "0.30315399169921875\n",
             "5\n",
             "Crisis finance: 99.83%\n",
             "Crisis finance: 91.51%\n",
+            "0.22086000442504883\n",
             "6\n",
             "Crisis finance: 99.54%\n",
             "PAF: 96.28%\n",
             "AA: 72.98%\n",
+            "0.3292527198791504\n",
             "7\n",
             "Crisis finance: 99.71%\n",
             "PAF: 93.09%\n",
             "AA: 79.02%\n",
+            "1.291215181350708\n",
             "8\n",
             "Crisis finance: 99.52%\n",
             "PAF: 96.73%\n",
             "PAF: 89.96%\n",
+            "0.2159101963043213\n",
             "9\n",
             "Crisis finance: 99.42%\n",
             "PAF: 98.45%\n",
-            "PAF: 98.35%\n"
+            "PAF: 98.35%\n",
+            "0.26420140266418457\n",
+            "10\n",
+            "Unrelated: 99.81%\n",
+            "0.07162213325500488\n"
           ]
         }
       ],
@@ -114,6 +127,7 @@
         "import torch\n",
         "import numpy as np\n",
         "from scipy.special import softmax\n",
+        "import time\n",
         "\n",
         "\n",
         "def print_inference(class_name, confidence):\n",
@@ -180,11 +194,16 @@
         "    \"International Bank for Reconstruction and Development VIII.3. Disaster Prevention & Preparedness Multi-hazard response preparedness Other Official Flows (non Export Credit) COSTA RICA CATASTROPHE DEFERRED DRAW DOWN OPTION (CAT DDO)\",\n",
         "    # 9. PAF,Direct,Contingent financing\n",
         "    \"Inter-American Development Bank Contingent Loan for Natural Disaster Emergencies II.4. Banking & Financial Services Financial policy and administrative management Other Official Flows (non Export Credit) CONTINGENT LOAN FOR NATURAL DISASTER EMERGENCIES Contingent Loan for Natural Disaster Emergencies\",\n",
+        "    # 10. Unrelated\n",
+        "    \"Switzerland Protéger les filles et les jeunes femmes contre la violence au Mali I.5.a. Government & Civil Society-general Ending violence against women and girls ODA Grants PROTÉGER LES FILLES ET LES JEUNES FEMMES CONTRE LA VIOLENCE AU MALI\",\n",
         "]\n",
         "\n",
         "for i, text in enumerate(texts):\n",
         "    print(i)\n",
-        "    pipeline(tokenizer, model_1, model_2, model_3, text)"
+        "    start = time.time()\n",
+        "    pipeline(tokenizer, model_1, model_2, model_3, text)\n",
+        "    end = time.time()\n",
+        "    print(end - start)"
       ]
     }
   ],
