Last run of confusion and changes to try just title and descriptions + iati

--- a/train_binary_crisis.ipynb
+++ b/train_binary_crisis.ipynb
@@ -8,9 +8,9 @@
       },
       "outputs": [],
       "source": [
-        "from huggingface_hub import notebook_login\n",
+        "from huggingface_hub import login\n",
         "\n",
-        "notebook_login()"
+        "login()"
       ]
     },
     {
@@ -84,12 +84,17 @@
         "import numpy as np\n",
         "\n",
         "\n",
+        "unique_labels = [\"Unrelated\", \"Crisis finance\"]\n",
+        "id2label = {i: label for i, label in enumerate(unique_labels)}\n",
+        "label2id = {id2label[i]: i for i in id2label.keys()}\n",
+        "\n",
         "def remap_binary(example):\n",
         "    example['label'] = 'Unrelated' if example['labels'] == 'Unrelated' else 'Crisis finance'\n",
+        "    example['label'] = label2id[example['label']]\n",
         "    return example\n",
         "\n",
         "\n",
-        "dataset = load_dataset(\"alex-miller/cdp-paf-meta\", split=\"train\")\n",
+        "dataset = load_dataset(\"alex-miller/cdp-paf-meta-limited\", split=\"train\")\n",
         "dataset = dataset.map(remap_binary, remove_columns=['labels'], num_proc=8)\n",
         "\n",
         "dataset = dataset.class_encode_column('label').train_test_split(\n",
@@ -98,9 +103,6 @@
         "    shuffle=True,\n",
         "    seed=42\n",
         ")\n",
-        "unique_labels = [\"Crisis finance\", \"Unrelated\"]\n",
-        "id2label = {i: label for i, label in enumerate(unique_labels)}\n",
-        "label2id = {id2label[i]: i for i in id2label.keys()}\n",
         "\n",
         "card = \"alex-miller/ODABert\"\n",
         "tokenizer = AutoTokenizer.from_pretrained(card, model_max_length=512)\n",
@@ -110,11 +112,11 @@
         "    return tokenizer(examples['text'], truncation=True)\n",
         "\n",
         "\n",
-        "accuracy = evaluate.load('accuracy')\n",
+        "clf_metrics = evaluate.combine([\"accuracy\", \"f1\", \"precision\", \"recall\"])\n",
         "def compute_metrics(eval_pred):\n",
         "    predictions, labels = eval_pred\n",
         "    predictions = np.argmax(predictions, axis=1)\n",
-        "    return accuracy.compute(predictions=predictions, references=labels)\n",
+        "    return clf_metrics.compute(predictions=predictions, references=labels)\n",
         "\n",
         "\n",
         "tokenized_data = dataset.map(preprocess_function, batched=True, num_proc=2)\n",
@@ -123,11 +125,11 @@
         ")\n",
         "\n",
         "training_args = TrainingArguments(\n",
-        "    'cdp-crisis-finance-classifier',\n",
+        "    'cdp-crisis-finance-classifier-limited',\n",
         "    learning_rate=1e-6, # This can be tweaked depending on how loss progresses\n",
         "    per_device_train_batch_size=24, # These should be tweaked to match GPU VRAM\n",
         "    per_device_eval_batch_size=24,\n",
-        "    num_train_epochs=10,\n",
+        "    num_train_epochs=20,\n",
         "    weight_decay=0.01,\n",
         "    evaluation_strategy='epoch',\n",
         "    save_strategy='epoch',\n",
