--- a/train_multiclass_meta_synth.ipynb
+++ b/train_multiclass_meta_synth.ipynb
@@ -6,7 +6,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "! pip install datasets evaluate accelerate --quiet"
+        "! pip install datasets evaluate transformers accelerate huggingface_hub --quiet"
       ]
     },
     {
